# mealie-rag

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  docker-compose.yml  mise.toml
.dvc/: config
.github/workflows/: docker-build-push.yaml  mealierag-tests.yaml
local_mock/: docker-compose.yml
local_mock/litellm/: config.yaml
local_mock/mock_mealie/: main.py  (+2 more)
mock_mealie/: Dockerfile  main.py  recipes.json
scripts/: setup_project
src/mealierag/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/mealierag/evals/: .gitignore  datasets.dvc  enriched.dvc  raw_data.dvc
src/mealierag/evals/scripts/: README.md  create_langfuse_dataset.py  create_ragas_dataset.py  dump_recipes_from_mealie.py  enrich_recipes.py  eval_core.py  evaluate.py  ingest_from_file.py  langfuse_evaluate.py  run_generate_queries.py
src/mealierag/src/mealierag/: __init__.py  api.py  api_server.py  chat.py  cli.py  config.py  embeddings.py  ingest.py  llm_client.py  mealie.py  models.py  prompts.py  qa_ui_core.py  query_builder.py  run_fetch.py  run_ingest.py  run_qa_cli.py  run_qa_ui.py  run_qa_ui_client.py  service.py  tracing.py  vectordb.py
src/mealierag/tests/: conftest.py  test_api_server.py  test_chat.py  test_cli.py  test_config.py  test_embeddings.py  test_enrich.py  test_llm_client.py  test_mealie.py  test_models.py  test_qa_ui_core.py  test_query_builder.py  test_run_fetch.py  test_run_ingest.py  test_run_qa_cli.py  test_run_qa_ui.py  test_service.py  test_tracing.py  test_vectordb.py
src/mealierag/tests/evals/: test_eval_core.py
