[project]
name = "mealierag"
version = "0.8.0"
description = "A RAG application for recipe search"
readme = "README.md"
authors = [
    { name = "andlogreg", email = "tbd@email.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gradio~=6.3.0",
    "langfuse~=3.12.1",
    "ollama~=0.6.1",
    "openai~=2.16.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "python-json-logger~=4.0.0",
    "qdrant-client~=1.16.2",
    "requests~=2.32.5",
    "typer[all]~=0.21.1",
]

[project.scripts]
mealierag = "mealierag.cli:app"

[tool.ruff]
lint.extend-select = ["I"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff==0.14.13",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.1",
    "jupyter~=1.1.1",
    "ipykernel~=6.29.5",
    "ragas",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.uv.sources]
ragas = { git = "https://github.com/vibrantlabsai/ragas", rev = "2b38724" }
